# flicker

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
corpus/init/: example
desc/: comp.txt  sys.txt.const  test.txt  test.txt.const
makefiles/: alien.toml  helloworld_os.toml  rcore-tutorial-v3.toml  xv6-public.toml  xv6-riscv.toml  xv6-x86_64.toml
src/: cli.rs  fuzzer.rs  generator.rs  input.rs  lib.rs  main.rs  mutator.rs  option.rs  parse.rs  parser.rs  runner.rs  utility.rs
src/program/: call.rs  context.rs  metadata.rs  mod.rs  syscall.rs
src/program/syscall/: generation.rs  mod.rs  mutation.rs  utility.rs
