[package]
name = "flicker"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[features]
riscv64 = ["libafl_qemu/riscv64"]
x86_64 = ["libafl_qemu/x86_64"]

[dependencies]
libafl = { path = "/home/patrickli/os/LibAFL/libafl/" }
libafl_bolts = { path = "/home/patrickli/os/LibAFL/libafl_bolts/" }
libafl_qemu = { path = "/home/patrickli/os/LibAFL/libafl_qemu/", features = ["systemmode"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
ahash = "0.8.11"
serde = "1.0"
enum_dispatch = "0.3.13"
enum_downcast = { version = "0.2.0", features = ["derive"] }
syzlang-parser = "0.1.4"
log = "0.4.22"
postcard = { version = "1.0.8", features = ["use-std"] }
uuid = "1.10.0"
path-clean = "1.0.1"
# syscall2struct-helpers = { git = "https://github.com/nine-point-eight-p/syscall2struct.git" }
syscall2struct-helpers = { path = "/home/patrickli/program/fuzzing/syscall2struct/syscall2struct-helpers" }
enum_index = { git = "https://github.com/nine-point-eight-p/enum_index", branch = "no_std_support" }

# You can also use pulled repo if you want to change something of the library
# [patch."https://github.com/AFLplusplus/LibAFL/"]
# libafl = { path = "/home/patrickli/os/LibAFL/libafl/" }
# libafl_bolts = { path = "/home/patrickli/os/LibAFL/libafl_bolts/" }
# libafl_qemu = { path = "/home/patrickli/os/LibAFL/libafl_qemu/" }
