[package]
name = "flicker"
version = "0.1.0"
authors = ["Patrick Li <ninepointeight_p@outlook.com>"]
edition = "2021"

[profile.release]
incremental = true
debug = true
lto = "fat"
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[features]
# For riscv64 target
riscv64 = ["libafl_qemu/riscv64"]
# For x86_64 target
x86_64 = ["libafl_qemu/x86_64"]
# Use bytes input instead of syscall input
# DEPRECATED: Only for compatibility with older versions of flicker
bytes = []

[dependencies]
libafl = "0.14.0"
libafl_bolts = "0.14.0"
libafl_qemu = { version = "0.14.0", features = ["systemmode"], default-features = false }
libafl_targets = "0.14.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
ahash = "0.8.11"
serde = "1.0"
enum_dispatch = "0.3.13"
enum_downcast = { version = "0.2.0", features = ["derive"] }
syzlang-parser = "0.1.4"
log = "0.4.22"
postcard = { version = "1.0.8", features = ["use-std"] }
uuid = "1.10.0"
path-clean = "1.0.1"
syscall2struct-helpers = { git = "https://github.com/nine-point-eight-p/syscall2struct.git" }
enum_index = "0.2.0"
enum_common_fields = "0.7.0"

[patch.crates-io]
libafl = { git = "https://github.com/AFLplusplus/LibAFL", tag = "0.14.0" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", tag = "0.14.0" }
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL", tag = "0.14.0" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", tag = "0.14.0" }
enum_index =  { git = "https://github.com/nine-point-eight-p/enum_index", branch = "no_std_support" }
